@@ -7,6 +7,7 @@ then you win. –- Mahatma Gandhi
 Mon, Aug 3, 2009
 ---------------------------------------------------------------------
 - Implemented Admin > [Create User] form.
+- Include all application helpers except the ones in /admin/helpers subdirectory (GH #5).
 
 Sun, Aug 2, 2009
 ---------------------------------------------------------------------
